- Fixed slow repaints of dynamically wrapped lines. - Also optimised calculation of KateTextLine::cursorX.

Reviewed by Dominik Haumann.

BUG: 128690

svn path=/branches/KDE/3.5/kdelibs/; revision=549739